Update document for spglib-1.9.2

--- a/variable.html
+++ b/variable.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Important variables &mdash; spglib 1.9.1 documentation</title>
+    <title>Important variables &mdash; spglib 1.9.2 documentation</title>
     
     <link rel="stylesheet" href="_static/basic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.9.1',
+        VERSION:     '1.9.2',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="_static/js/jquery-fix.js"></script>
     <script type="text/javascript" src="_static/bootstrap-3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="_static/bootstrap-sphinx.js"></script>
-    <link rel="top" title="spglib 1.9.1 documentation" href="index.html" />
+    <link rel="top" title="spglib 1.9.2 documentation" href="index.html" />
     <link rel="next" title="Spglib for python" href="python-spglib.html" />
     <link rel="prev" title="API" href="api.html" />
 <meta charset='utf-8'>
@@ -50,7 +50,7 @@
         </button>
         <a class="navbar-brand" href="index.html">
           spglib</a>
-        <span class="navbar-text navbar-version pull-left"><b>1.9.1</b></span>
+        <span class="navbar-text navbar-version pull-left"><b>1.9.2</b></span>
       </div>
 
         <div class="collapse navbar-collapse nav-collapse">
@@ -148,12 +148,12 @@
   <span class="p">[</span> <span class="n">a_z</span><span class="p">,</span> <span class="n">b_z</span><span class="p">,</span> <span class="n">c_z</span> <span class="p">]</span> <span class="p">]</span>
 </pre></div>
 </div>
-<p>Cartesian position <span class="math">\mathbf{x}_\mathrm{Cart}</span> is obtained by</p>
+<p>Cartesian position <img class="math" src="_images/math/7d45286dafe84db58ecc5b297382f6861eb8ae19.png" alt="\mathbf{x}_\mathrm{Cart}"/> is obtained by</p>
 <div class="math">
-<p><span class="math">\mathbf{x}_\mathrm{Cart} = \mathrm{L}\cdot\mathbf{x}_\mathrm{frac}</span></p>
-</div><p>where <span class="math">\mathrm{L}</span> is the basis vectors defined above and is
-<span class="math">\mathrm{L}=(\mathbf{a},\mathbf{b},\mathbf{c})</span>, and
-<span class="math">\mathbf{x}_\mathrm{frac}</span> is the atomic position in fractional
+<p><img src="_images/math/e663d8bbe2c3314b848e6142ef59accd061ff5f5.png" alt="\mathbf{x}_\mathrm{Cart} = \mathrm{L}\cdot\mathbf{x}_\mathrm{frac}"/></p>
+</div><p>where <img class="math" src="_images/math/d7c3e25c0cffcdd91ef86dc5ad8cc14c536bfdbb.png" alt="\mathrm{L}"/> is the basis vectors defined above and is
+<img class="math" src="_images/math/5eb0071fede929457a74f449a71b15c41c1a5993.png" alt="\mathrm{L}=(\mathbf{a},\mathbf{b},\mathbf{c})"/>, and
+<img class="math" src="_images/math/851a67fb3f131f9bcbd7fce10f320f1cb0874c36.png" alt="\mathbf{x}_\mathrm{frac}"/> is the atomic position in fractional
 coordinates given below.</p>
 </div>
 <div class="section" id="position">
