--- a/python-spglib.html
+++ b/python-spglib.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Spglib for python &mdash; spglib 1.9.1 documentation</title>
+    <title>Spglib for python &mdash; spglib 1.9.2 documentation</title>
     
     <link rel="stylesheet" href="_static/basic.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,7 +15,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '1.9.1',
+        VERSION:     '1.9.2',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="_static/js/jquery-fix.js"></script>
     <script type="text/javascript" src="_static/bootstrap-3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="_static/bootstrap-sphinx.js"></script>
-    <link rel="top" title="spglib 1.9.1 documentation" href="index.html" />
+    <link rel="top" title="spglib 1.9.2 documentation" href="index.html" />
     <link rel="prev" title="Important variables" href="variable.html" />
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
@@ -49,7 +49,7 @@
         </button>
         <a class="navbar-brand" href="index.html">
           spglib</a>
-        <span class="navbar-text navbar-version pull-left"><b>1.9.1</b></span>
+        <span class="navbar-text navbar-version pull-left"><b>1.9.2</b></span>
       </div>
 
         <div class="collapse navbar-collapse nav-collapse">
@@ -413,7 +413,7 @@ shown in the spglib (C-API) document.</p>
 </li>
 <li><p class="first"><code class="docutils literal"><span class="pre">hall</span></code>: Hall symbol</p>
 </li>
-<li><p class="first"><code class="docutils literal"><span class="pre">transformation_matrix</span></code>: Transformation matrix from lattice of input cell to Bravais lattice <span class="math">L^{bravais} = L^{original} * T</span></p>
+<li><p class="first"><code class="docutils literal"><span class="pre">transformation_matrix</span></code>: Transformation matrix from lattice of input cell to Bravais lattice <img class="math" src="_images/math/f8cb9d224702767dd9cfedb4b1fd6cf8f15a1713.png" alt="L^{bravais} = L^{original} * T"/></p>
 </li>
 <li><p class="first"><code class="docutils literal"><span class="pre">origin</span> <span class="pre">shift</span></code>: Origin shift in the setting of Bravais lattice</p>
 </li>
