--- a/install.html
+++ b/install.html
@@ -18,7 +18,8 @@
         VERSION:     '1.9.9',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true
+        HAS_SOURCE:  true,
+        SOURCELINK_SUFFIX: '.txt'
       };
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
@@ -30,7 +31,6 @@
     <script type="text/javascript" src="_static/bootstrap-sphinx.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="top" title="spglib 1.9.9 documentation" href="index.html" />
     <link rel="next" title="C-APIs" href="api.html" />
     <link rel="prev" title="Spglib" href="index.html" />
 <meta charset='utf-8'>
@@ -234,14 +234,14 @@ small. Therefore the threading is activated when the number of atoms
         <br/>
         
 <div id="sourcelink">
-  <a href="_sources/install.txt"
+  <a href="_sources/install.rst.txt"
      rel="nofollow">Source</a>
 </div>
       
     </p>
     <p>
         &copy; Copyright 2009, Atsushi Togo.<br/>
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.9.<br/>
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.1.<br/>
     </p>
   </div>
 </footer>
