--- a/variable.html
+++ b/variable.html
@@ -18,7 +18,8 @@
         VERSION:     '1.9.9',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true
+        HAS_SOURCE:  true,
+        SOURCELINK_SUFFIX: '.txt'
       };
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
@@ -30,7 +31,6 @@
     <script type="text/javascript" src="_static/bootstrap-sphinx.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="top" title="spglib 1.9.9 documentation" href="index.html" />
     <link rel="next" title="Spglib for Python" href="python-spglib.html" />
     <link rel="prev" title="C-APIs" href="api.html" />
 <meta charset='utf-8'>
@@ -240,14 +240,14 @@ value of <code class="docutils literal"><span class="pre">angle_tolerance</span>
         <br/>
         
 <div id="sourcelink">
-  <a href="_sources/variable.txt"
+  <a href="_sources/variable.rst.txt"
      rel="nofollow">Source</a>
 </div>
       
     </p>
     <p>
         &copy; Copyright 2009, Atsushi Togo.<br/>
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.9.<br/>
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.1.<br/>
     </p>
   </div>
 </footer>
