--- a/variable.html
+++ b/variable.html
@@ -7,7 +7,7 @@
     <title>Variables &#8212; spglib 1.10.1 documentation</title>
     <link rel="stylesheet" href="_static/bootstrap-sphinx.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-    <script type="text/javascript" src="_static/documentation_options.js"></script>
+    <script type="text/javascript" id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
@@ -138,12 +138,12 @@ for Python interface is transposed.</p>
   <span class="p">[</span> <span class="n">a_z</span><span class="p">,</span> <span class="n">b_z</span><span class="p">,</span> <span class="n">c_z</span> <span class="p">]</span> <span class="p">]</span>
 </pre></div>
 </div>
-<p>Cartesian position <span class="math notranslate">\(\mathbf{x}_\mathrm{Cart}\)</span> is obtained by</p>
-<div class="math notranslate">
+<p>Cartesian position <span class="math notranslate nohighlight">\(\mathbf{x}_\mathrm{Cart}\)</span> is obtained by</p>
+<div class="math notranslate nohighlight">
 \[\mathbf{x}_\mathrm{Cart} = \mathrm{L}\cdot\mathbf{x}_\mathrm{frac}\]</div>
-<p>where <span class="math notranslate">\(\mathrm{L}\)</span> is the basis vectors defined above and is
-<span class="math notranslate">\(\mathrm{L}=(\mathbf{a},\mathbf{b},\mathbf{c})\)</span>, and
-<span class="math notranslate">\(\mathbf{x}_\mathrm{frac}\)</span> is the atomic position in fractional
+<p>where <span class="math notranslate nohighlight">\(\mathrm{L}\)</span> is the basis vectors defined above and is
+<span class="math notranslate nohighlight">\(\mathrm{L}=(\mathbf{a},\mathbf{b},\mathbf{c})\)</span>, and
+<span class="math notranslate nohighlight">\(\mathbf{x}_\mathrm{frac}\)</span> is the atomic position in fractional
 coordinates given below.</p>
 </div>
 <div class="section" id="position">
@@ -233,7 +233,7 @@ value of <code class="docutils literal notranslate"><span class="pre">angle_tole
     </p>
     <p>
         &copy; Copyright 2009, Atsushi Togo.<br/>
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.1.<br/>
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.7.6.<br/>
     </p>
   </div>
 </footer>
