deploy: 9218fa14771d967a20f00764b335bc2a265790a1

--- a/develop/magnetic_symmetry_flags.html
+++ b/develop/magnetic_symmetry_flags.html
@@ -429,13 +429,13 @@ title="Print to PDF"
 <li><p><code class="docutils literal notranslate"><span class="pre">with_time_reversal=true</span></code>: <span class="math notranslate nohighlight">\(1' \circ \mathbf{m} = -\mathbf{m}\)</span></p>
 <ul>
 <li><p><code class="docutils literal notranslate"><span class="pre">is_axial=true</span></code>: <span class="math notranslate nohighlight">\((\mathbf{R}, \mathbf{v}) \circ \mathbf{m} = (\mathrm{det} \mathbf{R}) \mathbf{R} \mathbf{m}\)</span></p></li>
-<li><p><code class="docutils literal notranslate"><span class="pre">is_axial=true</span></code>: <span class="math notranslate nohighlight">\((\mathbf{R}, \mathbf{v}) \circ \mathbf{m} = \mathbf{R} \mathbf{m}\)</span></p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">is_axial=false</span></code>: <span class="math notranslate nohighlight">\((\mathbf{R}, \mathbf{v}) \circ \mathbf{m} = \mathbf{R} \mathbf{m}\)</span></p></li>
 </ul>
 </li>
 <li><p><code class="docutils literal notranslate"><span class="pre">with_time_reversal=false</span></code>: <span class="math notranslate nohighlight">\(1' \circ \mathbf{m} = \mathbf{m}\)</span></p>
 <ul>
 <li><p><code class="docutils literal notranslate"><span class="pre">is_axial=true</span></code>: <span class="math notranslate nohighlight">\((\mathbf{R}, \mathbf{v}) \circ \mathbf{m} = (\mathrm{det} \mathbf{R}) \mathbf{R} \mathbf{m}\)</span></p></li>
-<li><p><code class="docutils literal notranslate"><span class="pre">is_axial=true</span></code>: <span class="math notranslate nohighlight">\((\mathbf{R}, \mathbf{v}) \circ \mathbf{m} = \mathbf{R} \mathbf{m}\)</span></p></li>
+<li><p><code class="docutils literal notranslate"><span class="pre">is_axial=false</span></code>: <span class="math notranslate nohighlight">\((\mathbf{R}, \mathbf{v}) \circ \mathbf{m} = \mathbf{R} \mathbf{m}\)</span></p></li>
 </ul>
 </li>
 </ul>
